<resources>
    <string name="app_name">Catch Me If You Can</string>
    <string name="title_activity_login_activitytest">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="login_title">Remember!</string>
    <string name="login_subtitle">Your username and password are case-sensitive.</string>
    <string name="register_subtitle">Your username and password are case-sensitive. They can be any alphanumeric characters.</string>
    <string name="registered_title">Not Registered? Click here to sign-up.</string>

    <!-- Server related strings -->
    <string name="SERVER_IP">ws://45.77.49.3</string>
    <string name="SERVER2_IP">ws://35.197.172.195</string>

    <string name="signedup_title">Already signed up? Click here to login.</string>
    <string name="main_title">Let\'s Start!</string>
    <string name="main_subtitle">Login or sign up for an account to play</string>
    <string name="exit_dialog_pos">Leave</string>
    <string name="exit_dialog_neg">Cancel</string>
    <string name="exit_dashboard_message">Are you sure you want to logout? You can rejoin the game if you log back in.</string>
    <string name="exit_dashboard_title">Logging out...</string>
    <string name="exit_app_title">Exiting App...</string>
    <string name="exit_app_message">Are you sure you want to exit?</string>
    <string name="add_title">Ask your friend for their username and enter it below</string>

    <string name ="ok">OK</string>
</resources>
